# rust-opentelemetry-example

./: Cargo.toml  README.md  docker-compose.yaml
src/: main.rs  request_metadata_middleware.rs  telemetry.rs  user_service.rs
