[package]
name = "rust-tracing"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-opentelemetry = { version = "0.18.0"}
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio-current-thread", "collector_client", "rt-tokio", "isahc_collector_client"] }
opentelemetry = { version = "0.18.0", features = ["rt-tokio-current-thread","trace"] }
tokio = { version = "1", features = ["full"] }
actix-web = "4.3.1"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
log = "0.4.17"
env_logger = "0.10.0"
serde_derive = "1.0.163"
tracing-bunyan-formatter = "0.3.7"
opentelemetry-prometheus = { version = "0.11.0", features = ["prometheus-encoding"] }
prometheus = { version = "0.13", features = ["default"] }
actix-web-opentelemetry = { version = "0.13.0", features = ["metrics", "prometheus", "metrics-prometheus", "opentelemetry-prometheus"] }
opentelemetry_sdk = { version = "0.18.0", features = ["metrics", "rt-tokio-current-thread", "trace"] }
futures-util = "0.3.28"
opentelemetry_api = "0.19.0"
